--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Synchron</title>
   <meta name="description" content="Synchron">
   <meta name="author" content="Synchron">
-    <p> Coming soon. </p>
+    <p> I can't be bothered to fix a website so here's my socials: </p>
     
     <p><a href="https://soundcloud.com/synchron"> soundcloud </a></p>
     <p><a href="https://www.facebook.com/synchronmusic"> facebook </a></p>
