--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <title>Synchron</title>
   <meta name="description" content="Synchron">
   <meta name="author" content="Synchron">
+  <style>
+.content {
+  max-width: 500px;
+  margin: auto;
+}
+</style>
+  <body class="content">
     <p> I can't be bothered to fix a website so here's my socials: </p>
     
     <p><a href="https://soundcloud.com/synchron"> soundcloud </a></p>
@@ -22,7 +29,7 @@
 
 </head>
 
-<body>
+
   <script src="js/scripts.js"></script>
 </body>
 </html>
