--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
   <title>Synchron</title>
   <meta name="description" content="Synchron">
   <meta name="author" content="Synchron">
+  </head>
   <style>
 .content {
   max-width: 500px;
   margin: auto;
 }
 </style>
-  <body class="content">
+  <body>
+    <div class="content">
+      
     <p> I can't be bothered to fix a website so here's my socials: </p>
     
     <p><a href="https://soundcloud.com/synchron"> soundcloud </a></p>
@@ -24,12 +27,8 @@
     <p><a href="https://www.youtube.com/channel/UC0iS4uqtWI-3DKlR4U4YfiA">youtube</a> </p>
     <p><a href="https://www.beatport.com/artist/synchron/98314">beatport</a></p>
     <p>contact@synchronofficial.com</p>
-
+    </div>
   <link rel="stylesheet" href="css/styles.css?v=1.0">
-
-</head>
-
-
   <script src="js/scripts.js"></script>
 </body>
 </html>
