--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p><a href="https://www.youtube.com/channel/UC0iS4uqtWI-3DKlR4U4YfiA">youtube</a> </p>
     <p><a href="https://www.beatport.com/artist/synchron/98314">beatport</a></p>
     <p><a href="https://synchron.bandcamp.com/">bandcamp</a></p>
-    <p>contact@synchronofficial.com</p>
+    <p>mgmt@synchron.dev</p>
     <p>project lead of audio subdivision at <a href="https://www.moxieart.co">moxieart.co</a></p>
     </div>
   <link rel="stylesheet" href="css/styles.css?v=1.0">
