--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="content">
       
-    <p> I can't be bothered to fix a website so here's my socials: </p>
+    <p> I can't be bothered to fix a website so here are my socials: </p>
     
     <p><a href="https://soundcloud.com/synchron"> soundcloud </a></p>
     <p><a href="https://www.facebook.com/synchronmusic"> facebook </a></p>
