--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p><a href="https://www.beatport.com/artist/synchron/98314">beatport</a></p>
     <p><a href="https://synchron.bandcamp.com/">bandcamp</a></p>
     <p>mgmt@synchron.dev</p>
-    <p>project lead of audio subdivision at <a href="https://www.moxieart.co">moxieart.co</a></p>
+    <p>Lead Audio Engineer & Moxie Audio Co-Founder at <a href="https://www.moxieart.co">moxieart.co</a></p>
     </div>
   <link rel="stylesheet" href="css/styles.css?v=1.0">
   <script src="js/scripts.js"></script>
